feat: Add caching support for trip updates and locations with Caffeine